# configcrypt

./: .gitignore  CHANGELOG.md  DISTRIBUTION_GUIDE.md  GITHUB_RELEASE_GUIDE.md  LICENSE  PYPI_RELEASE_GUIDE.md  README.md  TESTING_EXPLAINED.md  build_executable.py  pyproject.toml  run.py
.github/workflows/: README.md  test.yml
src/configcrypt/: __init__.py
src/configcrypt/cli/: __init__.py  commands.py
src/configcrypt/core/: __init__.py  editor_launcher.py  exceptions.py  format_parser.py  keychain_store.py  vault.py
src/configcrypt/gui/: __init__.py  app.py  dialogs.py  history.py  history_panel.py  main_window.py
src/configcrypt/utils/: __init__.py  password_strength.py
tests/cli/: test_cli_commands.py  test_cli_extended_commands.py
tests/gui/: test_dialogs.py  test_drop_zone_widget.py  test_dropzone_ui.py  test_file_type_recognition.py  test_main_window.py
tests/integration/: __init__.py  test_api_integration.py
tests/unit/: test_editor_launcher.py  test_format_parser.py  test_keychain_acceptance.py  test_keychain_store.py  test_properties.py  test_vault.py  test_vault_api.py  test_vault_file_operations.py  test_vault_format.py
